[gd_scene load_steps=16 format=3 uid="uid://un0y14wnyj4r"]

[ext_resource type="Script" uid="uid://demqhouc7tk3l" path="res://Scripts/player_movement.gd" id="1_kyqiw"]
[ext_resource type="Texture2D" uid="uid://ccct8fg1lr7n0" path="res://Sprites/Miner.png" id="2_b43ah"]
[ext_resource type="Texture2D" uid="uid://1s6o2j7m8tni" path="res://Sprites/a5bbfead133882d0a9f4c14a092c97be9cbbf5a3.png" id="3_b43ah"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbkls"]
size = Vector2(4, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_b43ah"]
atlas = ExtResource("2_b43ah")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxq8l"]
atlas = ExtResource("2_b43ah")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg3t4"]
atlas = ExtResource("2_b43ah")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_javds"]
atlas = ExtResource("2_b43ah")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ygst"]
atlas = ExtResource("2_b43ah")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shmu5"]
atlas = ExtResource("2_b43ah")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8lmw"]
atlas = ExtResource("2_b43ah")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhekp"]
atlas = ExtResource("2_b43ah")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2qb3"]
atlas = ExtResource("2_b43ah")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuv02"]
atlas = ExtResource("2_b43ah")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8afax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b43ah")
}],
"loop": false,
"name": &"Fall",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxq8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg3t4")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_javds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ygst")
}],
"loop": false,
"name": &"Land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shmu5")
}],
"loop": false,
"name": &"Large_Fall",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8lmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhekp")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2qb3")
}],
"loop": false,
"name": &"Sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuv02")
}],
"loop": false,
"name": &"Use_Pickaxe",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_kyqiw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_qbkls")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8afax")
animation = &"Idle"

[node name="PointLight2D" type="PointLight2D" parent="AnimatedSprite2D"]
position = Vector2(2.9999998, 2.0000007)
scale = Vector2(0.15, 0.15)
energy = 0.56
texture = ExtResource("3_b43ah")

[node name="Timers" type="Node2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.12
one_shot = true

[node name="MiningCooldown" type="Timer" parent="Timers"]
wait_time = 0.001
one_shot = true

[node name="GetUpTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="RayCasts" type="Node2D" parent="."]

[node name="Pickaxe" type="Node2D" parent="RayCasts"]
position = Vector2(0, 5)

[node name="Pickaxe_Left" type="RayCast2D" parent="RayCasts/Pickaxe"]
scale = Vector2(1, 0.5)
target_position = Vector2(-15, 0)

[node name="Pickaxe_Right" type="RayCast2D" parent="RayCasts/Pickaxe"]
scale = Vector2(1, 0.5)
target_position = Vector2(15, 0)

[node name="Pickaxe_Up" type="RayCast2D" parent="RayCasts/Pickaxe"]
scale = Vector2(0.5, 1)
target_position = Vector2(0, -15)

[node name="Pickaxe_Down" type="RayCast2D" parent="RayCasts/Pickaxe"]
scale = Vector2(0.5, 1)
target_position = Vector2(0, 15)

[node name="Movement" type="Node2D" parent="RayCasts"]

[node name="Left_HeadNudge" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(-2, 1)
scale = Vector2(0.3, 0.3)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="Left_HeadNudge2" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(-1.5, 1)
scale = Vector2(0.3, 0.3)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="Right_HeadNudge" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(1.9999995, 1)
scale = Vector2(0.3, 0.3)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="Right_HeadNudge2" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(1.5, 1)
scale = Vector2(0.3, 0.3)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="Right_LedgeHop" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(2, 6)
scale = Vector2(0.3, 0.3)
target_position = Vector2(2, 0)
hit_from_inside = true

[node name="Right_LedgeHop2" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(2, 7)
scale = Vector2(0.3, 0.3)
target_position = Vector2(2, 0)
hit_from_inside = true

[node name="Left_LedgeHop" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(-2, 7)
scale = Vector2(0.3, 0.3)
target_position = Vector2(-2, 0)
hit_from_inside = true

[node name="Left_LedgeHop2" type="RayCast2D" parent="RayCasts/Movement"]
position = Vector2(-2, 6)
scale = Vector2(0.3, 0.3)
target_position = Vector2(-2, 0)
hit_from_inside = true

[connection signal="timeout" from="Timers/GetUpTimer" to="." method="_on_get_up_timer_timeout"]
